# New-project

./: .gitignore  .mcp.json  README.md  pyproject.toml  typos.toml
.history/: KhabaCore_20260513183818.code-workspace  KhabaCore_20260515143350.code-workspace  README_20260514024013.md  README_20260514024502.md  README_20260514024505.md  README_20260514024507.md  README_20260514024509.md  README_20260514024511.md  README_20260514024513.md  README_20260514024514.md  README_20260514024516.md  README_20260514024518.md  README_20260514024519.md  README_20260514024521.md  README_20260514024524.md  README_20260514024525.md
.history/docs/: arquitectura-escalable_20260514024021.md  arquitectura-escalable_20260514024431.md  arquitectura-escalable_20260514024433.md  arquitectura-escalable_20260514024435.md  arquitectura-escalable_20260514024438.md  arquitectura-escalable_20260514024440.md  arquitectura-escalable_20260514024442.md  arquitectura-escalable_20260514024444.md  arquitectura-escalable_20260514024446.md  arquitectura-escalable_20260514024449.md  arquitectura-escalable_20260514024451.md  arquitectura-escalable_20260514024452.md  arquitectura-escalable_20260514024454.md  arquitectura-escalable_20260514024456.md
.history/src/khaba_core/: core_20260513192717.py  core_20260514022426.py  core_20260514022428.py  core_20260514022432.py  core_20260514022434.py  (+16 more)
.idx/: mcp.json
docs/: arquitectura-escalable.md  seguimiento-cambios.md
examples/: custom_profile.py  run_decision.py
src/khaba_core/: __init__.py  core.py  layers.py  models.py
tests/: test_khaba_core.py
