[project]
name = "khaba-core"
version = "0.1.0"
description = "Nucleo cognitivo jerarquico con ego, subconsciente y maestro interior."
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP006", "UP007"]

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.9"
typeCheckingMode = "basic"
